--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Coreos-osx-gui-kubernetes-cluster : CoreOS-Vagrant Kubernetes GUI for OS X">
+    <title>Coreos-osx-gui-kubernetes-cluster by rimusz</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Coreos-osx-gui-kubernetes-cluster</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Coreos-osx-gui-kubernetes-cluster</h1>
+        <p>CoreOS-Vagrant Kubernetes GUI for OS X</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/rimusz/coreos-osx-gui-kubernetes-cluster">View on GitHub</a>
+        <p class="view"><a href="https://github.com/rimusz/coreos-osx-gui-kubernetes-cluster">View the Project on GitHub <small>rimusz/coreos-osx-gui-kubernetes-cluster</small></a></p>
 
-          <h1 id="project_title">Coreos-osx-gui-kubernetes-cluster</h1>
-          <h2 id="project_tagline">CoreOS-Vagrant Kubernetes GUI for OS X</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/rimusz/coreos-osx-gui-kubernetes-cluster/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/rimusz/coreos-osx-gui-kubernetes-cluster/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/rimusz/coreos-osx-gui-kubernetes-cluster/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/rimusz/coreos-osx-gui-kubernetes-cluster/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/rimusz/coreos-osx-gui-kubernetes-cluster">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
 <a id="coreos-vagrant-kubernetes-cluster-gui-for-os-x" class="anchor" href="#coreos-vagrant-kubernetes-cluster-gui-for-os-x" aria-hidden="true"><span class="octicon octicon-link"></span></a>CoreOS-Vagrant Kubernetes Cluster GUI for OS X</h1>
 
@@ -96,7 +93,7 @@ home folder</li>
 <li>
 <code>Updates/Check for updates</code> will update etcdclt, fleetctl and kubernetes OS X clients to the same versions as CoreOS VMs run. </li>
 <li>
-<code>SSH to k8smaster01 and k8snode-02/03</code> menu options will open VM shells</li>
+<code>SSH to k8smaster01 and k8snode-01/02</code> menu options will open VM shells</li>
 <li>
 <a href="http://fleetui.com">Fleet-UI</a> will show running fleet units and etc</li>
 </ul>
@@ -116,17 +113,12 @@ home folder</li>
 <li><p>Cluster one without Kubernetes CoreOS VM App can be found here <a href="https://github.com/rimusz/coreos-osx-gui-cluster">CoreOS-Vagrant Cluster GUI</a>.</p></li>
 </ul>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Coreos-osx-gui-kubernetes-cluster maintained by <a href="https://github.com/rimusz">rimusz</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/rimusz">rimusz</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
