Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <ul>
 <li>
-<a href="https://www.virtualbox.org/wiki/Downloads">VirtualBox for Mac OS X hosts</a>, <a href="http://www.vagrantup.com/downloads.html">Vagrant for Mac OS X</a> and <a href="http://www.iterm2.com/#/section/downloads">iTerm 2</a>
+<a href="https://www.virtualbox.org/wiki/Downloads">VirtualBox</a>, <a href="http://www.vagrantup.com/downloads.html">Vagrant</a> and <a href="http://www.iterm2.com/#/section/downloads">iTerm 2</a>
 </li>
 <li>Unzip downloaded file and copy e.g. the App to Desktop.</li>
 <li>Start the <code>CoreOS k8s Cluster</code> App and from menu <code>Setup</code> and choose: <code>Initial setup of CoreOS-Vagrant k8s Cluster</code>
