--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 <p><code>CoreOS-Vagrant Kubernetes Cluster GUI for Mac OS X</code> is a Mac Status bar App which works like a wrapper around <a href="https://github.com/coreos/coreos-vagrant">coreos-vagrant</a> command line tool and bootstraps Kubernetes cluster with one master and two minions machines.</p>
 
+<p>Note: Alpha channel uses etcd2, beta and stable are still on etcd 0.4.</p>
+
 <p><a href="https://coreos.com">CoreOS</a> is a Linux distribution made specifically to run <a href="https://www.docker.io/">Docker</a> containers.
 <a href="https://github.com/coreos/coreos-vagrant">CoreOS-Vagrant</a> is made to run on VirtualBox and VMWare VMs.</p>
 
@@ -77,20 +79,28 @@ home folder</li>
 <pre><code>1) kubernetes master - export KUBERNETES_MASTER=http://172.17.15.101:8080
 2) etcd endpoint - export ETCDCTL_PEERS=http://172.17.15.101:4001
 3) fleetctl endpoint - export FLEETCTL_ENDPOINT=http://172.17.15.101:4001
-4) Path to ~/coreos-osx-cluster/bin where etcdctl, fleetctl and kubernetes binaries are stored
+4) fleetctl driver - export FLEETCTL_DRIVER=etcd
+5) Path to ~/coreos-osx-cluster/bin where etcdctl, fleetctl and kubernetes binaries are stored
 </code></pre>
 
 <ul>
 <li>
+<code>Updates/Update Kubernetes cluster and OS X kubectl</code> will update to latest version of Kubernetes.</li>
+<li>
+<code>Updates/Update OS X fleetctl, etcdclt and fleet units</code> will update fleetctl, etcdclt clients to the same versions as CoreOS VMs run and to latest fleet units if the new version of App is used.</li>
+<li>
 <code>Updates/Force CoreOS update</code> will be run <code>sudo update_engine_client -update</code> on each CoreOS VM.</li>
 <li>
-<code>Updates/Check for updates</code> will update etcdclt, fleetctl and kubernetes OS X clients to the same versions as CoreOS VMs run.</li>
+<code>Updates/Check updates for CoreOS vbox</code> will update CoreOS VM vagrant box.
+*</li>
 <li>
 <code>SSH to k8smaster01 and k8snode-01/02</code> menu options will open VM shells</li>
 <li>
+<code>node1/2 cAdvisor</code> will open cAdvisor URL in default browser</li>
+<li>
 <a href="http://fleetui.com">Fleet-UI</a> will show running fleet units and etc</li>
 <li>
-<a href="https://github.com/kubernetes-ui">Kubernetes-UI</a> will show nice Kubernetes Dashboard, where you can check Nodes, Pods, Replication Controllers and etc.</li>
+<a href="http://kismatic.io/">Kismatic.io</a> <a href="https://github.com/kubernetes-ui">Kubernetes-UI</a> will show nice Kubernetes Dashboard, where you can check Nodes, Pods, Replication Controllers and etc.</li>
 </ul>
 
 <p>Example ouput of succesfull CoreOS + Kubernetes cluster install:</p>
@@ -121,8 +131,8 @@ kubernetes-ui.service       f01c50e9.../172.17.15.101   active  running
 
 k8s nodes list:
 NAME                LABELS              STATUS
-172.17.15.102       &lt;none&gt;              Ready
-172.17.15.103       &lt;none&gt;              Ready
+172.17.15.102       node=worker1        Ready
+172.17.15.103       node=worker2        Ready
 
 </code></pre>
 
