--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <p><code>CoreOS-Vagrant Kubernetes Cluster GUI for Mac OS X</code> is a Mac Status bar App which works like a wrapper around <a href="https://github.com/coreos/coreos-vagrant">coreos-vagrant</a> command line tool and bootstraps Kubernetes cluster with one master and two minions machines.</p>
 
-<p>Note: Alpha channel uses etcd2, beta and stable are still on etcd 0.4.</p>
+<p>Note: Alpha and beta channel use etcd2, stable is still on etcd 0.4.</p>
 
 <p><a href="https://coreos.com">CoreOS</a> is a Linux distribution made specifically to run <a href="https://www.docker.io/">Docker</a> containers.
 <a href="https://github.com/coreos/coreos-vagrant">CoreOS-Vagrant</a> is made to run on VirtualBox and VMWare VMs.</p>
@@ -98,9 +98,9 @@ home folder</li>
 <li>
 <code>node1/2 cAdvisor</code> will open cAdvisor URL in default browser</li>
 <li>
-<a href="http://fleetui.com">Fleet-UI</a> will show running fleet units and etc</li>
+<a href="http://fleetui.com">Fleet-UI</a> dashboard will show running fleet units and etc</li>
 <li>
-<a href="http://kismatic.io/">Kismatic.io</a> <a href="https://github.com/kubernetes-ui">Kubernetes-UI</a> will show nice Kubernetes Dashboard, where you can check Nodes, Pods, Replication Controllers and etc.</li>
+<a href="https://github.com/GoogleCloudPlatform/kubernetes/tree/master/www">Kubernetes-UI</a> (contributed by <a href="http://kismatic.io/">Kismatic.io</a>) will show nice Kubernetes Dashboard, where you can check Nodes, Pods, Replication Controllers and etc.</li>
 </ul>
 
 <p>Example ouput of succesfull CoreOS + Kubernetes cluster install:</p>
